tests/compile_fail/eq/unknown_struct_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/eq/unknown_struct_attribute.rs:2:6
  |
2 | #[eq(unknown)]
  |      ^^^^^^^
